--- a/files/index.html
+++ b/files/index.html
@@ -4,81 +4,4 @@
 
 <title>WebSocket Test</title>
 
-<script language="javascript" type="text/javascript">
-
-  var output;
-  var textInput;
-
-  function init() {
-    output = document.getElementById("output");
-    textInput = document.getElementById("input");
-    testWebSocket();
-  }
-
-  function testWebSocket() {
-    var wsUri = "ws://" + location.host + "/ws";
-    websocket = new WebSocket(wsUri);
-    websocket.onopen = function (evt) { onOpen(evt) };
-    websocket.onclose = function (evt) { onClose(evt) };
-    websocket.onmessage = function (evt) { onMessage(evt) };
-    websocket.onerror = function (evt) { onError(evt) };
-  }
-
-  function onOpen(evt) {
-    writeToScreen("CONNECTED");
-  }
-
-  function onClose(evt) {
-    writeToScreen("DISCONNECTED");
-  }
-
-  function onMessage(evt) {
-    if (evt.data.startsWith("KICK")) {
-      location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';
-    } else {
-      writeToScreen('<span style="color: blue;">' + evt.data + '</span>');
-    }
-  }
-
-  function onError(evt) {
-    writeToScreen('<span style="color: red;">ERROR:</span> ' + evt.data);
-  }
-
-  function doSend(message) {
-    writeToScreen("SENT: " + message);
-    websocket.send(message);
-  }
-
-  function writeToScreen(message) {
-    var pre = document.createElement("p");
-    pre.style.wordWrap = "break-word";
-    pre.innerHTML = message;
-    output.appendChild(pre);
-  }
-
-  function doDisconnect() {
-    var disconnect = document.getElementById("disconnect");
-    disconnect.disabled = true;
-    websocket.close();
-  }
-
-  function sendMessage() {
-      doSend(textInput.value);
-  }
-
-
-
-  window.addEventListener("load", init, false);
-
-</script>
-
-<h2>WebSocket Test <input type="button" id="disconnect" onclick="doDisconnect()" value="X" title="Disconnect WS" /></h2>
-
-<input id="input" type="text">
-<button onclick="sendMessage()">Send</button>
-
-<input id="msg" type="text">
-<input id="id" type="number">
-<button onclick="sendMessageTo()">SendMessage</button>
-
-<div id="output"></div>
+<script src="script.js" language="javascript" type="text/javascript"></script>
