--- a/files/index.html
+++ b/files/index.html
@@ -1,7 +1,67 @@
+<!-- 
+    This file is part of ESPSmartHome.
+
+    ESPSmartHome is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+
+    ESPSmartHome is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License along with Foobar. If not, see <https://www.gnu.org/licenses/>. 
+
+    Authors Sebastian Sobczak, Bartosz Krajewski
+-->
+
 <!DOCTYPE html>
+<html lang="en">
 
-<meta charset="utf-8" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>smartHOME</title>
 
-<title>WebSocket Test</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
-<script src="script.js" language="javascript" type="text/javascript"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+
+</head>
+
+<body>
+  <header>
+    <h1>smartHOME</h1>
+  </header>
+  <main>
+    <div class="button" onclick="pinClick(0)">
+      <div id="button0">
+        <p>PIN</p>
+      </div>
+    </div>
+    <div class="button" onclick="pinClick(1)">
+      <div href="#" id="button1">
+        <p>PIN</p>
+      </div>
+    </div>
+    <div class="button" onclick="pinClick(2)">
+      <div id="button2">
+        <p>PIN</p>
+      </div>
+    </div>
+    <div class="button" onclick="pinClick(3)">
+      <div id="button3">
+        <p>PIN</p>
+      </div>
+    </div>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+
+</html>
